# Cafe21

./: .gitignore  README.md  platformio.ini
lib/ui_480/: CMakeLists.txt  filelist.txt  library.properties  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
lib/ui_480/components/: ui_comp_hook.c
lib/ui_480/fonts/: ui_font_LoraRegular20.c  ui_font_OpenSansSemiBold12.c
lib/ui_480/images/: ui_img_check_png.c  ui_img_chevron_png.c  ui_img_coffee_png.c  ui_img_config_png.c  ui_img_espresso_png.c  ui_img_exit_png.c  ui_img_logo21_png.c  ui_img_trash_png.c  ui_img_warning_png.c  ui_img_water_png.c  ui_img_wifi_png.c
lib/ui_480/screens/: ui_choose.c  ui_config.c  ui_home.c  ui_payment.c  ui_preparing.c  ui_success.c
lib/ui_480/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_extended.h  ui_helpers.c  ui_helpers.h
lib/ui_480/src/components/: ui_comp.c  ui_comp.h  ui_comp_goback.c  ui_comp_goback.h  ui_comp_hook.c  ui_comp_hook.h
lib/ui_480/src/fonts/: ui_font_LoraRegula24.c  ui_font_LoraRegular20.c  ui_font_OpenSansRegular12.c  ui_font_OpenSansSemiBold12.c  ui_font_OpenSansSemiBold14.c  ui_font_OpenSansSemiBold16.c
lib/ui_480/src/images/: ui_img_1837598647.c  ui_img_419703364.c  ui_img_check_png.c  ui_img_checklarge_png.c  ui_img_chevronsmall_png.c  ui_img_coffe_png.c  ui_img_coffelarge_png.c  ui_img_configsmall_png.c  ui_img_exitsmall_png.c  ui_img_expresso_png.c  ui_img_expressolarge_png.c  ui_img_hose_png.c  ui_img_hoselarge_png.c  ui_img_logo21_png.c  ui_img_minussmall_png.c  ui_img_plussmall_png.c  ui_img_qr_code_png.c  ui_img_shower_png.c  (+10 more)
(+244 files in other folders)
